#workspace = { members = ["app"] }
[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
#embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
#embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
#embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
#embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
#embassy-usb-logger = { version = "0.1.0" }
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
#

#defmt = "0.3"
defmt-rtt = "0.4"
#defmt-serial = "0.8" #this could be an alternative, to rtt?

#fixed = "1.23.1"
#fixed-macro = "1.2"
#
##cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
#cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
#futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
#display-interface-spi = "0.4.1"
#embedded-graphics = "0.7.1"
#st7789 = "0.6.1"
#display-interface = "0.4.1"
#byte-slice-cast = { version = "1.2.0", default-features = false }
#smart-leds = "0.3.0"
#heapless = "0.8"
#usbd-hid = "0.7.0"
#
#embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
#embedded-hal-async = "1.0"
#embedded-hal-bus = { version = "0.1", features = ["async"] }
#embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
#embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
#log = "0.4"
#pio-proc = "0.2"
#pio = "0.2.1"
#rand = { version = "0.8.5", default-features = false }



##### alt #####
# cortex-m = "0.7"
# cortex-m-rt = "0.7"
# embedded-hal = { version = "0.2.5", features = ["unproven"] }

# defmt = "0.3"
# defmt-rtt = "0.4"
# panic-probe = { version = "0.3", features = ["print-defmt"] }

# # We're using a Pico by default on this template
# rp-pico = "0.8"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true
