[package]
name = "feature_tests"
version = "1.0.0" # This is a project-internal package, so the version doesn't matter and will be 1.0.0 forever.
edition = "2021"

[dependencies]
cucumber = "0.21.1"
tokio = { version = "1.42.0", features = ["full"] }
serialport = "4.6.1"
udev = "0.9.1"

[[test]]
name = "feature_tests"
path = "main.rs"
harness = false  # allows Cucumber to print output instead of libtest
